--- a/academic/10_references.tex
+++ b/academic/10_references.tex
@@ -10,11 +10,11 @@
 \vspace{\spaceSection}
 
 \begin{center}
-    \begin{tabular}{ p{6cm} p{6cm} p{6cm} }
-        \refereeA & \refereeB & \refereeC \\
-        \refereeAAffil & \refereeBAffil & \refereeCAffil \\
-        \refereeAPhone & \refereeBPhone & \refereeCPhone \\
-        \refereeAMail  & \refereeBMail  & \refereeCMail
+    \begin{tabular}{ m{6cm} m{6cm} m{6cm} }
+        \refereeA       & \refereeB         & \refereeC \\
+        \refereeAAffil  & \refereeBAffil    & \refereeCAffil \\
+        \refereeAPhone  & \refereeBPhone    & \refereeCPhone \\
+        \refereeAMail   & \refereeBMail     & \refereeCMail
     \end{tabular}
 \end{center}
 
