--- a/academic/academic_cv.tex
+++ b/academic/academic_cv.tex
@@ -19,14 +19,13 @@
 \usepackage{ragged2e} % used to justify block of text
 \usepackage{pgffor}   % used to foreach statement
 \usepackage[skip=1pt]{parskip}  % used to remove the default paragraph indent and set vertical space globally
+\usepackage{tabularx} % used to create tables fitting the entire page
 
 % Add bibliography
 \addbibresource{../data/bibliography/bibliography.bib} % BibLaTeX
 
-% Include recipients' data
+% Include global data
 \input{../data/12_recipients.tex}
-% Include author's data
-\input{../data/00_main.tex}
 
 % Define vertical spaces lengths
 \newcommand\spaceSection{12pt}
