Added cover letter support

--- a/data/10_references.tex
+++ b/data/10_references.tex
@@ -2,7 +2,7 @@
 \newcommand\refereeA{Christopher}
 \newcommand\refereeAAffil{CEO}
 \newcommand\refereeAMail{\href{mailto:christopher@pooh.com}{christopher@pooh.com}}
-\newcommand\refereeAPhone{\href{callto:++44500123456}{+44 500 123 456}}
+\newcommand\refereeAPhone{\href{callto:+44500123456}{+44 500 123 456}}
 \newcommand\refereeARole{My dearest human friend, owner of all the Toys}
 
 \newcommand\refereeB{Piglet}
