Added industry support.

--- a/cover_letter/letter.tex
+++ b/cover_letter/letter.tex
@@ -1,4 +1,4 @@
-% Basic LaTeX academic cover letter. The root file. 
+% Basic LaTeX cover letter template. The root file. 
 % Copyright (c) 2025 Mariusz Matusiak <mariusz.m.matusiak@gmail.com>
 
 % Define base document class, paper size and margins
