--- a/data/04_skills.tex
+++ b/data/04_skills.tex
@@ -17,13 +17,13 @@
 \newcommand\allOtherSkills{
     {Honey integration testing},
     {Honey unit testing},
-    {Honey end-to-end testing},
+    {Honey end-to-end testing/1},
     {Honey smell testing},
-    {Honey-to-mouth automation}}
+    {Honey-to-mouth automation/1}}
 
 % === SOFT SKILLS ===
 \newcommand\allSoftSkills{
     {Honey-oriented},
-    {Food goal-driven},
+    {Food goal-driven/1},
     {Being cute and charming for conflict resolution}}
 
