--- a/data/05_proudof.tex
+++ b/data/05_proudof.tex
@@ -1,13 +1,13 @@
 
-\newcommand\achievementATitle{The first prize winner in the contest for the cutest bear worldwide in 1948}
-\newcommand\achievementATitleBreak{The first prize winner in the contest for the cutest bear worldwide in 1948}
+\newcommand\achievementATitle{The first prize winner in the contest for the cutest bear worldwide}
+\newcommand\achievementATitleBreak{The first prize winner in the contest for the cutest bear \\worldwide}
 \newcommand\achievementAWho{International Bear Association}
 \newcommand\achievementAWhen{05/1948}
 \newcommand\achievementAWhere{\achievementAWho, \achievementAWhen}
 \newcommand\achievementAUrl{https://iba.com/cutest-bear}
 
-\newcommand\achievementBTitle{Distinction in the honey barista cupping championships in 1947}
-\newcommand\achievementBTitleBreak{Distinction in the honey barista cupping championships in 1947}
+\newcommand\achievementBTitle{Distinction in the honey barista cupping championships}
+\newcommand\achievementBTitleBreak{Distinction in the honey barista cupping championships}
 \newcommand\achievementBWho{Honey Cupping Championships}
 \newcommand\achievementBWhen{03/1947}
 \newcommand\achievementBWhere{\achievementBWho, \achievementBWhen}
