--- a/academic/00_header.tex
+++ b/academic/00_header.tex
@@ -7,8 +7,7 @@
 \newcommand\hSpaceLen{4pt}
 
 \begin{center}
-    \textbf{\bioName}
-    \bioHeader\\
+    \textbf{\bioName} \bioHeader  \\
     \faIcon{envelope} \bioEmailUrl{} \hspace{\hSpaceLen} \faIcon{mobile} \bioPhoneUrl{} \hspace{\hSpaceLen} \faIcon{map-marker-alt} \bioLocation{} \ifx\positionLocation\undefined (*willing to relocate) \else (*applying to \positionLocation{}) \fi \\
     \faIcon{orcid} \bioOrcidUrl{} \hspace{\hSpaceLen} \faIcon[regular]{researchgate} \bioResearchGateUrl{} \hspace{\hSpaceLen} \faIcon{linkedin} \bioLinkedInUrl{} \hspace{\hSpaceLen} \faIcon{github} \bioGitHubUrl{} \\
     \hrulefill
