--- a/data/06_certsandcourses.tex
+++ b/data/06_certsandcourses.tex
@@ -1,11 +1,13 @@
 
 \newcommand\certScrumMaster{Certified Scrum Master for Honey Development}
+\newcommand\certScrumMasterBreak{Certified Scrum Master for Honey Development}
 \newcommand\certScrumMasterWho{Agile Bears Association}
 \newcommand\certScrumMasterWhen{10/1950}
 \newcommand\certScrumMasterWhere{\certScrumMasterWho, \certScrumMasterWhen}
 \newcommand\certScrumMasterUrl{https://www.abass.com/scrummasters/}
 
-\newcommand\certCookies{Eat a cookie and have a cookie - workshop for beginners}
+\newcommand\certCookies{Eat a cookie and have a cookie - a workshop for beginners}
+\newcommand\certCookiesBreak{Eat a cookie and have a cookie - a workshop for \\beginners}
 \newcommand\certCookiesWho{Ashdown University of Technology}
 \newcommand\certCookiesWhen{11/1944}
 \newcommand\certCookiesWhere{\certCookiesWho, \certCookiesWhen}
