--- a/data/00_main.tex
+++ b/data/00_main.tex
@@ -1,3 +1,20 @@
+% CV Templates
+% Copyright (C) 2025  Mariusz Matusiak <mariusz.m.matusiak@gmail.com>
+%
+% This program is free software: you can redistribute it and/or modify
+% it under the terms of the GNU Affero General Public License as published
+% by the Free Software Foundation, either version 3 of the License, or
+% (at your option) any later version.
+%
+% This program is distributed in the hope that it will be useful,
+% but WITHOUT ANY WARRANTY; without even the implied warranty of
+% MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+% GNU Affero General Public License for more details.
+%
+% You should have received a copy of the GNU Affero General Public License
+% along with this program.  If not, see <https://www.gnu.org/licenses/>.
+%
+
 \newcommand\bioName{Winnie-the-Pooh}
 \newcommand\bioHeader{MBA, PMP, PhD, Senior Honey Specialist,\\100+ years of experience in cooking, tasting \& consumption}
 \newcommand\bioEmail{winnie.the@pooh.com}
